--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - mvc_market</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href="/css/site.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/site.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
     <header data-bs-theme="dark">
@@ -47,7 +47,7 @@
             </div>
         </nav>
     </header>
-    <div class="main container mt-5">
+    <div class="container mt-5">
         @RenderBody()
     </div>
     <footer class="container fixed-bottom bg-white">
